# tr1cot

./: .gitignore  pyproject.toml
articles/: fractal.md
notebooks/: train_text_ddpm.ipynb
notebooks/asciiart/: train.ipynb  train.keras.ipynb
notebooks/text-to-asciiart/: lora.ipynb
tests/models/: test_cnn.py  test_vit.py
tr1cot/layers/: embedding.py  transformer.py
tr1cot/models/: cnn.py  unet.py
