[tool.poetry]
name = "tr1cot"
version = "0.1.1"
description = "Diffusion on language, with fractal shaping."
license = ".github/LICENSE.md"
readme = ".github/README.md"
authors = ["apehex <17317183+apehex@users.noreply.github.com>"]
packages = [{include="tr1cot"}]

[tool.poetry.dependencies]
densecurves = ">=0.1"
mlable = ">=0.22"
python = ">=3.10,<3.13"
tensorflow = ">=2.16, <2.20"
tokun = ">=0.17"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
