[project]
name = "tr1cot"
version = "0.1.1"
description = "Diffusion on language, with fractal shaping."
authors = [{ name = "apehex", email = "17317183+apehex@users.noreply.github.com" }]
requires-python = ">=3.10,<3.14"
readme = ".github/README.md"
license = "AGPL-3.0-only"
license-files = [".github/LICENSE.md"]
dependencies = [
    "densecurves>=0.1",
    "mlable>=0.22",
    "tensorflow>=2.16, <2.20",
    "tokun>=0.17",
]

[dependency-groups]
dev = ["pytest"]

[tool.hatch.build.targets.sdist]
include = ["tr1cot"]

[tool.hatch.build.targets.wheel]
include = ["tr1cot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
